feat: [GATE-71] 지역리스트 조회 API 구현
- place 내 city 테이블로 분리하여 관리